@@ -5,23 +5,27 @@ import lombok.NoArgsConstructor;
 import pl.marcinm312.springdatasecurityex.answer.model.dto.AnswerGet;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class AnswerMapper {
 
-	public static AnswerGet convertAnswerEntityToAnswerGet(AnswerEntity answer) {
+	public static AnswerGet convertAnswerEntityToAnswerGet(AnswerEntity answer, boolean isCreateOrUpdate) {
 
-		return AnswerGet.builder()
+		var builder = AnswerGet.builder()
 				.id(answer.getId())
 				.text(answer.getText())
-				.createdAt(answer.getCreatedAt())
-				.updatedAt(answer.getUpdatedAt())
-				.user(answer.getUser().getUsername())
-				.build();
+				.user(answer.getUser().getUsername());
+
+		if (!isCreateOrUpdate) {
+			builder = builder
+					.createdAt(answer.getCreatedAt())
+					.updatedAt(answer.getUpdatedAt());
+		}
+
+		return builder.build();
 	}
 
 	public static List<AnswerGet> convertAnswerEntityListToAnswerGetList(List<AnswerEntity> answerList) {
-		return answerList.stream().map(AnswerMapper::convertAnswerEntityToAnswerGet).collect(Collectors.toList());
+		return answerList.stream().map(answer -> convertAnswerEntityToAnswerGet(answer, false)).toList();
 	}
 }
